--- a/fund_exploration_part2.ipynb
+++ b/fund_exploration_part2.ipynb
@@ -56,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -71,6 +71,10 @@
     "  household_2016,\n",
     "  non_0_pop_block,\n",
     "  urban_rural,\n",
+    "  CASE WHEN fund_max_up > 0 THEN fund_max_up ELSE 0 END as fund_max_up,\n",
+    "  CASE WHEN fund_max_down > 0 THEN fund_max_down ELSE 0 END as fund_max_down,\n",
+    "  CASE WHEN max_up > 0 THEN max_up ELSE 0 END as max_up,\n",
+    "  CASE WHEN max_down > 0 THEN max_down ELSE 0 END as max_down,\n",
     "  CASE WHEN fund_count> 0 THEN fund_count ELSE 0 END as fund_count,\n",
     "  estimate_median_household_income_in_the_past_12_months_in_2016_inflation_adjusted_dollars as median_household_income_2016,\n",
     "  CASE WHEN provider_ct > 0 THEN 1 ELSE 0 END as broadband_access,\n",
@@ -96,6 +100,8 @@
     "\n",
     "LEFT JOIN (SELECT \n",
     "             COUNT(*) as provider_ct,\n",
+    "             MAX(max_up) as max_up,\n",
+    "             MAX(max_down) as max_down,\n",
     "             block_code\n",
     "           FROM broadband.fcc\n",
     "           WHERE file_date = 201612\n",
@@ -107,7 +113,9 @@
     "  \n",
     "LEFT JOIN (SELECT \n",
     "             census_block,\n",
-    "             COUNT(*) as fund_count\n",
+    "             COUNT(*) as fund_count,\n",
+    "             MAX(max_down) as fund_max_down,\n",
+    "             MAX(max_up) as fund_max_up\n",
     "             FROM broadband.fund\n",
     "             WHERE YEAR = 2017\n",
     "             GROUP BY census_block) as fund\n",
@@ -119,7 +127,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -128,7 +136,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -870,7 +878,6 @@
     "mean_fund = []\n",
     "mean_no_fund = []\n",
     "block_count = []\n",
-    "\n",
     "\n",
     "for i in tqdm(range(len(bins)-1)):\n",
     "    temp = df_block[(df_block.housing_unit_per_mile > 0) &\n",
