add prediction without negative importance features

--- a/fund_prediction_model.ipynb
+++ b/fund_prediction_model.ipynb
@@ -1145,6 +1145,81 @@
     "    print(i)\n",
     "    make_pdp(i)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Prediction With Positive Importance Features\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 112,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Fitting 2 folds for each of 8 candidates, totalling 16 fits\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "[Parallel(n_jobs=-1)]: Done  16 out of  16 | elapsed:   32.4s finished\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Train score 0.7217809364548494\n",
+      "Test score 0.6302787162162162\n",
+      "Best Parameters: {'max_depth': 15, 'min_samples_split': 20, 'n_estimators': 100}\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Random Forest Model\n",
+    "\n",
+    "rfmodel_balanced = RandomForestClassifier(class_weight='balanced')\n",
+    "params = {\n",
+    "    'n_estimators': [100],\n",
+    "    'min_samples_split': range(10, 30, 5),\n",
+    "    'max_depth': range(10, 18, 5),\n",
+    "}\n",
+    "\n",
+    "X_train_positive_features = X_train[coefficients_sort[coefficients_sort.feature_importance>0].feature.values]\n",
+    "X_test_positive_features = X_test[coefficients_sort[coefficients_sort.feature_importance>0].feature.values]\n",
+    "\n",
+    "\n",
+    "grid_search_balanced = GridSearchCV(estimator=rfmodel_balanced, param_grid=params,\n",
+    "                                    scoring='f1', cv=2, n_jobs=-1, verbose=True)\n",
+    "grid_search_balanced.fit(X_train_positive_features, y_train)\n",
+    "\n",
+    "print('Train score', grid_search_balanced.score(X_train_positive_features, y_train))\n",
+    "print('Test score', grid_search_balanced.score(X_test_positive_features, y_test))\n",
+    "print('Best Parameters:', grid_search_balanced.best_params_)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 110,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "features = list(coefficients_sort[coefficients_sort.feature_importance>0].feature.values)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
