fund result updates

--- a/fund_prediction_model.ipynb
+++ b/fund_prediction_model.ipynb
@@ -631,6 +631,495 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 67,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data_new['proba'] = proba[:,1]\n",
+    "all_results = data_new[['block_group', 'proba', 'fund_provided_per']]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 68,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>block_group</th>\n",
+       "      <th>proba</th>\n",
+       "      <th>fund_provided_per</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>17</th>\n",
+       "      <td>484790018142</td>\n",
+       "      <td>0.413647</td>\n",
+       "      <td>0.666667</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>18</th>\n",
+       "      <td>120210114001</td>\n",
+       "      <td>0.389357</td>\n",
+       "      <td>0.250000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>19</th>\n",
+       "      <td>120330028041</td>\n",
+       "      <td>0.164395</td>\n",
+       "      <td>0.933333</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>21</th>\n",
+       "      <td>390830075001</td>\n",
+       "      <td>0.626457</td>\n",
+       "      <td>0.863636</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>22</th>\n",
+       "      <td>291618904001</td>\n",
+       "      <td>0.467033</td>\n",
+       "      <td>0.750000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>25</th>\n",
+       "      <td>131879602023</td>\n",
+       "      <td>0.433883</td>\n",
+       "      <td>0.983051</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>26</th>\n",
+       "      <td>482012333001</td>\n",
+       "      <td>0.330807</td>\n",
+       "      <td>0.045455</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>27</th>\n",
+       "      <td>482015555011</td>\n",
+       "      <td>0.467492</td>\n",
+       "      <td>0.768212</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>28</th>\n",
+       "      <td>371470009003</td>\n",
+       "      <td>0.478013</td>\n",
+       "      <td>0.454545</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>29</th>\n",
+       "      <td>131559502006</td>\n",
+       "      <td>0.648642</td>\n",
+       "      <td>0.355372</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>30</th>\n",
+       "      <td>450099602007</td>\n",
+       "      <td>0.451078</td>\n",
+       "      <td>0.848837</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>31</th>\n",
+       "      <td>391390010003</td>\n",
+       "      <td>0.597526</td>\n",
+       "      <td>0.964286</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>32</th>\n",
+       "      <td>180030109001</td>\n",
+       "      <td>0.780093</td>\n",
+       "      <td>0.250000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>33</th>\n",
+       "      <td>180210401002</td>\n",
+       "      <td>0.258072</td>\n",
+       "      <td>0.777778</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>34</th>\n",
+       "      <td>390759764002</td>\n",
+       "      <td>0.782896</td>\n",
+       "      <td>0.901316</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>35</th>\n",
+       "      <td>483599501002</td>\n",
+       "      <td>0.626641</td>\n",
+       "      <td>0.648855</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>36</th>\n",
+       "      <td>460119587002</td>\n",
+       "      <td>0.823417</td>\n",
+       "      <td>0.808696</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>37</th>\n",
+       "      <td>170039578002</td>\n",
+       "      <td>0.176471</td>\n",
+       "      <td>0.210526</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>38</th>\n",
+       "      <td>483239502011</td>\n",
+       "      <td>0.552961</td>\n",
+       "      <td>0.324675</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>39</th>\n",
+       "      <td>350319405001</td>\n",
+       "      <td>0.233779</td>\n",
+       "      <td>0.383562</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>40</th>\n",
+       "      <td>481410105053</td>\n",
+       "      <td>0.551603</td>\n",
+       "      <td>0.355556</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>41</th>\n",
+       "      <td>291994801002</td>\n",
+       "      <td>0.856108</td>\n",
+       "      <td>0.009259</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>42</th>\n",
+       "      <td>350130018021</td>\n",
+       "      <td>0.314451</td>\n",
+       "      <td>0.800000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>43</th>\n",
+       "      <td>270190904011</td>\n",
+       "      <td>0.718099</td>\n",
+       "      <td>0.984000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>44</th>\n",
+       "      <td>460419415001</td>\n",
+       "      <td>0.596686</td>\n",
+       "      <td>0.400000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>45</th>\n",
+       "      <td>390759763011</td>\n",
+       "      <td>0.713423</td>\n",
+       "      <td>0.983425</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>46</th>\n",
+       "      <td>130237903003</td>\n",
+       "      <td>0.298587</td>\n",
+       "      <td>0.148148</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>47</th>\n",
+       "      <td>490139405001</td>\n",
+       "      <td>0.579297</td>\n",
+       "      <td>0.992337</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>48</th>\n",
+       "      <td>130339505002</td>\n",
+       "      <td>0.456525</td>\n",
+       "      <td>0.285714</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>49</th>\n",
+       "      <td>180816106043</td>\n",
+       "      <td>0.795479</td>\n",
+       "      <td>0.227273</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>72819</th>\n",
+       "      <td>180350023023</td>\n",
+       "      <td>0.584821</td>\n",
+       "      <td>1.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>72820</th>\n",
+       "      <td>200739658002</td>\n",
+       "      <td>0.659473</td>\n",
+       "      <td>1.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>72821</th>\n",
+       "      <td>481239705002</td>\n",
+       "      <td>0.767936</td>\n",
+       "      <td>1.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>72822</th>\n",
+       "      <td>420792111022</td>\n",
+       "      <td>0.545532</td>\n",
+       "      <td>1.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>72823</th>\n",
+       "      <td>160759603003</td>\n",
+       "      <td>0.444204</td>\n",
+       "      <td>1.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>72824</th>\n",
+       "      <td>120850017003</td>\n",
+       "      <td>0.639893</td>\n",
+       "      <td>1.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>72825</th>\n",
+       "      <td>260590501001</td>\n",
+       "      <td>0.249112</td>\n",
+       "      <td>1.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>72826</th>\n",
+       "      <td>120690301054</td>\n",
+       "      <td>0.664536</td>\n",
+       "      <td>1.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>72827</th>\n",
+       "      <td>420034070021</td>\n",
+       "      <td>0.130839</td>\n",
+       "      <td>1.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>72828</th>\n",
+       "      <td>180859609003</td>\n",
+       "      <td>0.233932</td>\n",
+       "      <td>1.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>72829</th>\n",
+       "      <td>230110250004</td>\n",
+       "      <td>0.337029</td>\n",
+       "      <td>1.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>72830</th>\n",
+       "      <td>410670336002</td>\n",
+       "      <td>0.697913</td>\n",
+       "      <td>1.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>72831</th>\n",
+       "      <td>181039526001</td>\n",
+       "      <td>0.751705</td>\n",
+       "      <td>1.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>72832</th>\n",
+       "      <td>550019507002</td>\n",
+       "      <td>0.783726</td>\n",
+       "      <td>1.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>72833</th>\n",
+       "      <td>300810005003</td>\n",
+       "      <td>0.171716</td>\n",
+       "      <td>1.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>72834</th>\n",
+       "      <td>540390019011</td>\n",
+       "      <td>0.095721</td>\n",
+       "      <td>1.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>72835</th>\n",
+       "      <td>481450007001</td>\n",
+       "      <td>0.760585</td>\n",
+       "      <td>1.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>72836</th>\n",
+       "      <td>350490107003</td>\n",
+       "      <td>0.220684</td>\n",
+       "      <td>1.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>72837</th>\n",
+       "      <td>291379601003</td>\n",
+       "      <td>0.731531</td>\n",
+       "      <td>1.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>72838</th>\n",
+       "      <td>171739592002</td>\n",
+       "      <td>0.797409</td>\n",
+       "      <td>1.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>72839</th>\n",
+       "      <td>170219588001</td>\n",
+       "      <td>0.223438</td>\n",
+       "      <td>1.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>72840</th>\n",
+       "      <td>270054506002</td>\n",
+       "      <td>0.187002</td>\n",
+       "      <td>1.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>72841</th>\n",
+       "      <td>290594802001</td>\n",
+       "      <td>0.720315</td>\n",
+       "      <td>1.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>72842</th>\n",
+       "      <td>340373739001</td>\n",
+       "      <td>0.568854</td>\n",
+       "      <td>1.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>72843</th>\n",
+       "      <td>510890108003</td>\n",
+       "      <td>0.404871</td>\n",
+       "      <td>1.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>72844</th>\n",
+       "      <td>260099601003</td>\n",
+       "      <td>0.547804</td>\n",
+       "      <td>1.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>72845</th>\n",
+       "      <td>292090904002</td>\n",
+       "      <td>0.723580</td>\n",
+       "      <td>1.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>72846</th>\n",
+       "      <td>481939503005</td>\n",
+       "      <td>0.246756</td>\n",
+       "      <td>1.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>72847</th>\n",
+       "      <td>481851802004</td>\n",
+       "      <td>0.733204</td>\n",
+       "      <td>1.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>72848</th>\n",
+       "      <td>350519624011</td>\n",
+       "      <td>0.296254</td>\n",
+       "      <td>1.000000</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>71174 rows × 3 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "        block_group     proba  fund_provided_per\n",
+       "17     484790018142  0.413647           0.666667\n",
+       "18     120210114001  0.389357           0.250000\n",
+       "19     120330028041  0.164395           0.933333\n",
+       "21     390830075001  0.626457           0.863636\n",
+       "22     291618904001  0.467033           0.750000\n",
+       "25     131879602023  0.433883           0.983051\n",
+       "26     482012333001  0.330807           0.045455\n",
+       "27     482015555011  0.467492           0.768212\n",
+       "28     371470009003  0.478013           0.454545\n",
+       "29     131559502006  0.648642           0.355372\n",
+       "30     450099602007  0.451078           0.848837\n",
+       "31     391390010003  0.597526           0.964286\n",
+       "32     180030109001  0.780093           0.250000\n",
+       "33     180210401002  0.258072           0.777778\n",
+       "34     390759764002  0.782896           0.901316\n",
+       "35     483599501002  0.626641           0.648855\n",
+       "36     460119587002  0.823417           0.808696\n",
+       "37     170039578002  0.176471           0.210526\n",
+       "38     483239502011  0.552961           0.324675\n",
+       "39     350319405001  0.233779           0.383562\n",
+       "40     481410105053  0.551603           0.355556\n",
+       "41     291994801002  0.856108           0.009259\n",
+       "42     350130018021  0.314451           0.800000\n",
+       "43     270190904011  0.718099           0.984000\n",
+       "44     460419415001  0.596686           0.400000\n",
+       "45     390759763011  0.713423           0.983425\n",
+       "46     130237903003  0.298587           0.148148\n",
+       "47     490139405001  0.579297           0.992337\n",
+       "48     130339505002  0.456525           0.285714\n",
+       "49     180816106043  0.795479           0.227273\n",
+       "...             ...       ...                ...\n",
+       "72819  180350023023  0.584821           1.000000\n",
+       "72820  200739658002  0.659473           1.000000\n",
+       "72821  481239705002  0.767936           1.000000\n",
+       "72822  420792111022  0.545532           1.000000\n",
+       "72823  160759603003  0.444204           1.000000\n",
+       "72824  120850017003  0.639893           1.000000\n",
+       "72825  260590501001  0.249112           1.000000\n",
+       "72826  120690301054  0.664536           1.000000\n",
+       "72827  420034070021  0.130839           1.000000\n",
+       "72828  180859609003  0.233932           1.000000\n",
+       "72829  230110250004  0.337029           1.000000\n",
+       "72830  410670336002  0.697913           1.000000\n",
+       "72831  181039526001  0.751705           1.000000\n",
+       "72832  550019507002  0.783726           1.000000\n",
+       "72833  300810005003  0.171716           1.000000\n",
+       "72834  540390019011  0.095721           1.000000\n",
+       "72835  481450007001  0.760585           1.000000\n",
+       "72836  350490107003  0.220684           1.000000\n",
+       "72837  291379601003  0.731531           1.000000\n",
+       "72838  171739592002  0.797409           1.000000\n",
+       "72839  170219588001  0.223438           1.000000\n",
+       "72840  270054506002  0.187002           1.000000\n",
+       "72841  290594802001  0.720315           1.000000\n",
+       "72842  340373739001  0.568854           1.000000\n",
+       "72843  510890108003  0.404871           1.000000\n",
+       "72844  260099601003  0.547804           1.000000\n",
+       "72845  292090904002  0.723580           1.000000\n",
+       "72846  481939503005  0.246756           1.000000\n",
+       "72847  481851802004  0.733204           1.000000\n",
+       "72848  350519624011  0.296254           1.000000\n",
+       "\n",
+       "[71174 rows x 3 columns]"
+      ]
+     },
+     "execution_count": 68,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "all_results.to_csv('fund_prediction_result.csv', index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 57,
    "metadata": {},
    "outputs": [
