update feature importance

--- a/fund_prediction_model.ipynb
+++ b/fund_prediction_model.ipynb
@@ -437,8 +437,9 @@
     "coefficients['feature'] = ['Road Density', 'Elevation Mean', 'Elevation Range', 'Average Winter Temperature', \n",
     "                           'Population Density', 'Male Percentage', 'Median Income', 'Median Age', 'White Percentage', \n",
     "                           'Average Years of Education', 'Unemployment Rate', 'Housing Density',\n",
-    "                           'Percentage of Housing Units Occupied by Owners', 'Percentage of Newly Moved Households',\n",
+    "                           'Percentage of Housing Units \\n Occupied by Owners', 'Percentage of Newly Moved Households',\n",
     "                          'Percentage of Newly Built Housing Units', 'Laws Against Broadband Expansion', ]\n",
+    "coefficients.to_csv('fund_feature_importance.csv', index = false)\n",
     "coefficients_sort = coefficients.sort_values('feature_importance', ascending=False).reset_index(drop=True)"
    ]
   },
